# examples

./: .gitattributes  .gitignore  GNUmakefile  Makefile  README.md  ascii  best-practice.md  best-practices  best-practices.md  c-states  index.html  interesting-projects  latency  pinentry  questions  quotes  tao-of-unix  tput
advent/: README
algorithms/: complexity-of-search-alg  priority-queue
ansible/: README  ansible.cfg  basic  hosts  ping.yml
arcanist/: basic
archive/: cat.c
artifactory/: query
ascii-art/: requests
asciidoc/: Makefile  cheat-sheet  example.txt
autoconf/: CONFIG_SITE  basic  m4_esyscmd
automake/: silence
awk/: array-ordering
aws/: basic  cloudformation  configure  docker  ec2  ecs  eks  list-accounts  secretsmanager  simple-cluster
bash/: argparse  array  atexit  basic  break  case  command-subst  completion  declare  die  errexit  file-descriptors  flock  flock2  getopts  light-reading  nameref  printf  ps4  query  redirect  sigchld  source  special  squeeze  startup  trap  usage  workqueue
bazel/: Makefile  README  glossary
bigquery/: access  curl  load
blaze/: glossary
brew/: list  logs  uninstall
browsers/: bindings
c/: .gitignore  BUILD  LICENSE  Makefile  Makefile,v  Makefile.am  README.md  access.c  alignment.txt  alternate.c  arithperm-test  arithperm.c  array-declaration.c  array.c  assert.c  atexit.c  bit-shift  bst-test  bst.c  c11  calc-coverage  calc-test  calc.c  check-calc  check-dups.c  clean-man.c  cleanup.c  clearerr.c  complex.c  configure.ac  coverage-test  ctime.c  default-pipe.c  diff16.c  digraphs.c  double.c  dynamic-array-test  dynamic-array.c  dynamic-int.c  dynamic-read-test  (+122 more)
c/include/: BUILD  ring-buffer.h  stack.h
c/lib/: BUILD  Makefile  libstack.c  libxutil.c  stack.c  xutil.h
c/main/: BUILD  chmod.c  ctime.c  diff16.c  dynamic-array.c  dynamic-int.c  dynamic.c  fmemopen.c  fopen.c  forkexec.c  forkpty.c  function-ptr2.c  grow.c  isprint.c  jump-table.c  libwrp-bindgen.c  ls-sort.c  ls.c  mmap.c  ncurses.c  open.c  poly.c  pyramid.c  qsort.c  random-word.c  read-indexed.c  ring-buffer.c  seek.c  static-assert.c  unix-server.c
c/preprocessor/: diagnostics.c  string.c  stringify.c  while.c
c/resize-pty/: Makefile  resizepty.c  show-key.c  show-size.c  wrappty.c
c/src/: BUILD  Makefile  TODO  array.c  assert.c  atexit.c  bst.c  bstee.c  calc.c  casting.c  cat.c  char-cast.c  chmod.c  cleanup.c  clearerr.c  complex.c  compound-initializer.c  ctime.c  double.c  dynamic-read.c  fgetwc.c  float.c  fork-multiply.c  fork-pipe.c  fork-pool.c  fork.c  forkexec.c  forkpty.c  fread.c  fseek.c  function-ptr.c  function-ptr3.c  generic.c  getc.c  getcwd.c  head.c  heapify.c  hsearch.c  http-client.c  kaprekar.c  (+54 more)
c/src/build-errors/: README  ncurses.c
c/test/: BUILD  arithperm-test  calc-test  check-dups-test  coverage-test  dynamic-array-test  dynamic-read-test  dynamic-test  fread-test  grow-test  list-test  mmap-test  poly-test  pyramid-test  read-indexed-test  read-txt-into-array-test  scanf-test  sqlite-test  tac-test
cassandra/: basic
cgroup/: basic
chrome/: key-bindings
clang/: basic
claude/: CLAUDE.md  interface  settings.json  statusline
cmake/: basic
cron/: basic
ctags/: basic
cuda/: basic  builtin  constant  devices  environ  glossary  linkage  malloc  tools
curses/: ctrl.c  timeout.c  underline.c
cxx/: C++20  Makefile  cin.cc  class.cc  copy-elision.cc  emplace_back.cc  enum::class.cc  enum_class.cc  erase-remove.cc  errno.cc  find_if.cc  foreach.cc  generic.cc  hashmap.cc  if.cc  ifstream.cc  iota.cc  lambda.cc  make_shared.cc  malloc.cc  move-constructor.cc  move.cc  overrride.cc  paragraph.cc  pointer-to-member.cc  ranged-for.cc  read-file.cc  sorting.cc  static-assert.cc  stoi.cc  streambuf.cc  string.cc  stringstream.cc  struct.cc  tour-of-c++  tuple.cc  typeid.cc  unnamed-namespace.cc  using.cc  vec.cc  (+3 more)
das/: numbers
debugging/: basic  gdb
design-patterns/: circuit-breaker  gang-of-four.md
docker/: Makefile  colima  commands  common-makefile  dockerfile-basics  limits
dotfiles/: README
dpkg/: basic
dvtm/: build-on-macos  create
elixir/: hello.exs  operators.exs
float/: ieee754
fossil/: cheatsheet  git-import
fpm/: basic
gcloud/: auth  basic  compute  container  create  disk  filter  gcloud  gsutil  iam  metadata  roles
gcp/: create  disk  filter  gcloud  iam  metadata  serial-port  service-account
gdb/: basic  gdb2lldb
gh/: basic  comments  cursor  gh-comment-tree  issue  pr  repo
git/: alias  archive  atomic-bisect  attributes  basic  branch  cherry-pick  commit  commit-tree  compute-oid  config  dangling  diff  email  environ  filter-branch  format  git-rev-parse  gitdir  github  gitrevisions  ignore  log  log-format  merge  merge-base  metadata  miscellaneous  notes  orphans  pathspec  push  rebase  rebase-repo  ref  reflog  releases  remotes  reset-url  rev-parse  (+13 more)
git-bug/: basic  docker-image  git-bug-show  list-issues
github/: README  basic  comments  issue  misc  pr  query  repo  rest
gitkraken/: ui
gitlab/: .gitlab-ci.yml  api  basic-administration  get-job-log  glab  merge-template  query  run-in-docker
glab/: README
glibc/: basic
gnome/: basic
go/: Makefile  README  commands  environ  features  proverbs  tags  testing  (+2 more)
hashmap/: LICENSE  Makefile,v  Makefile.am  baseline  benchmark.c  builtin-test.c  configure.ac  example.c  hashmap.c  hashmap.h  hashtest.c
libhash/: Makefile,v  Makefile.am  benchmark.c  builtin-test.c  coverage-test  hashmap.c  hashmap.h  hashtest.c
rust/projects/rbe/: Cargo.toml  Makefile
rust/projects/rbe/src/: Makefile  alias.rs  array.rs  capture.rs  cast.rs  closures.rs  constants.rs  debug.rs  display.rs  enum.rs  fmt.rs  hof.rs  if-let.rs  inference.rs  input-parameters.rs  into.rs  linked-list.rs  literals.rs  loop.rs  methods.rs  nested.rs  print-list.rs  print.rs  struct.rs  ternary.rs  tryinto.rs  tuple.rs  types.rs  use.rs
utils/: LICENSE  Makefile,v  Makefile.am  clean-man.c  configure.ac  pr  rsync  run.1  run.c  run.txt
utils/build-aux/: package-version
(+1493 files in other folders)
