project(
  'c-examples',
  'c',
  meson_version : '>= 1.3.0',
  version : '0.1',
  default_options : ['warning_level=3'],
)

rb = static_library('ring-buffer', sources: ['libring-buffer.c'])
stack = static_library('stack', sources: ['libstack.c'])
bindgen = static_library('bindgen', sources: ['libwrp-bindgen.c'])
xutil = static_library('xutil', sources: ['libxutil.c'])
dot = include_directories('.')

libxutil = declare_dependency(link_with: xutil, include_directories: dot)
librb = declare_dependency(link_with: rb, include_directories: dot)
libstack = declare_dependency(link_with: stack, include_directories: dot)

executable('access', 'access.c', dependencies: [libxutil])
executable('arithperm', 'arithperm.c')
executable('array-declaration', 'array-declaration.c')
executable('array', 'array.c')
executable('assert', 'assert.c')
executable('atexit', 'atexit.c')
executable('bst', 'bst.c')
executable('bstee', 'bstee.c')
executable('c_examples', 'c_examples.c')
executable('calc', 'calc.c', dependencies: [librb, libstack])
executable('casting', 'casting.c')
executable('cat', 'cat.c', dependencies: [libxutil])
executable('char-cast', 'char-cast.c')
executable('check-dups', 'check-dups.c')
executable('chmod', 'chmod.c', dependencies: [libxutil])
executable('cleanup', 'cleanup.c')
executable('clearerr', 'clearerr.c')
executable('complex', 'complex.c')
executable('compound-initializer', 'compound-initializer.c')
executable('ctime', 'ctime.c')
executable('diff16', 'diff16.c', dependencies: [libxutil])
executable('digraphs', 'digraphs.c')
executable('double', 'double.c')
executable('dynamic-array', 'dynamic-array.c', dependencies: [libxutil])
executable('dynamic-int', 'dynamic-int.c')
executable('dynamic-read', 'dynamic-read.c', dependencies: [libxutil])
executable('dynamic', 'dynamic.c', dependencies: [libxutil])
executable('fgetwc', 'fgetwc.c', dependencies: [libxutil])
executable('filter', 'filter.c')
executable('fizzbuzz', 'fizzbuzz.c')
executable('float', 'float.c')
executable('fmemopen', 'fmemopen.c')
executable('fopen', 'fopen.c')
executable('fork-multiply', 'fork-multiply.c')
executable('fork-pipe', 'fork-pipe.c')
executable('fork-pool', 'fork-pool.c')
executable('fork', 'fork.c')
executable('forkexec', 'forkexec.c')
executable('forkpty', 'forkpty.c')
executable('fread', 'fread.c', dependencies: [libxutil])
executable('fseek', 'fseek.c', dependencies: [libxutil])
executable('fsync', 'fsync.c', dependencies: [libxutil])
executable('function-ptr', 'function-ptr.c')
executable('function-ptr2', 'function-ptr2.c')
executable('function-ptr3', 'function-ptr3.c')
executable('generic', 'generic.c')
executable('getc', 'getc.c')
executable('getcwd', 'getcwd.c')
executable('getdelim', 'getdelim.c', dependencies: [libxutil])
executable('grow', 'grow.c', dependencies: [libxutil])
executable('head', 'head.c', dependencies: [libxutil])
executable('heapify', 'heapify.c')
executable('hello', 'hello.c')
executable('http-client', 'http-client.c')
executable('initializer', 'initializer.c')
executable('interleave-input', 'interleave-input.c')
executable('isprint', 'isprint.c')
executable('jump-table', 'jump-table.c')
executable('kaprekar', 'kaprekar.c')
executable('limits', 'limits.c')
executable('link', 'link.c')
executable('list', 'list.c', dependencies: [libxutil])
executable('load-matrix', 'load-matrix.c', dependencies: [libxutil])
executable('ls-sort', 'ls-sort.c')
executable('ls', 'ls.c')
executable('min-max-heap', 'min-max-heap.c')
executable('mkstemp', 'mkstemp.c')
executable('mmap', 'mmap.c', dependencies: [libxutil])
executable('morse', 'morse.c')
executable('morse2', 'morse2.c')
executable('mv', 'mv.c')
executable('nextafter', 'nextafter.c')
executable('nftw', 'nftw.c')
executable('nftw2', 'nftw2.c')
executable('open', 'open.c')
executable('opendir', 'opendir.c')
executable('palindrome', 'palindrome.c')
executable('pipehup', 'pipehup.c')
executable('poll', 'poll.c')
executable('poly', 'poly.c', dependencies: [libxutil])
executable('popen', 'popen.c')
executable('pow', 'pow.c')
executable('prctl', 'prctl.c')
executable('primes', 'primes.c')
executable('printf', 'printf.c')
executable('procname', 'procname.c', dependencies: [libxutil])
executable('pyramid', 'pyramid.c')
executable('qsort', 'qsort.c')
executable('rand', 'rand.c')
executable('random-word', 'random-word.c', dependencies: [libxutil])
executable('read-indexed', 'read-indexed.c', dependencies: [libxutil])
executable('read-text-into-char-ptr-ptr', 'read-text-into-char-ptr-ptr.c')
executable('read-txt-into-array', 'read-txt-into-array.c')
executable('read', 'read.c', dependencies: [libxutil])
executable('realloc', 'realloc.c')
executable('realpath', 'realpath.c')
executable('remove-common-word', 'remove-common-word.c')
executable('replicate-tree', 'replicate-tree.c')
executable('scanf-term', 'scanf-term.c')
executable('scanf', 'scanf.c', dependencies: [libxutil])
executable('sed1q', 'sed1q.c', dependencies: [libxutil])
executable('seek', 'seek.c')
executable('select', 'select.c')
executable('setitimer', 'setitimer.c')
executable('shebang', 'shebang.c')
executable('show-mask', 'show-mask.c')
executable('sieve', 'sieve.c')
executable('sigaction', 'sigaction.c', dependencies: [libxutil])
executable('simple-dc', 'simple-dc.c')
executable('snprintf', 'snprintf.c')
executable('sort-by-length', 'sort-by-length.c')
executable('sort-generic', 'sort-generic.c')
executable('sortdir', 'sortdir.c')
# executable('sqlite', 'sqlite.c')
executable('standard', 'standard.c')
executable('stat', 'stat.c')
executable('stop-watch', 'stop-watch.c')
executable('strcspn', 'strcspn.c')
executable('strftime', 'strftime.c')
executable('strlen', 'strlen.c')
executable('strncat', 'strncat.c')
executable('strncmp', 'strncmp.c')
executable('strncpy', 'strncpy.c')
executable('strptime', 'strptime.c')
executable('strtod', 'strtod.c')
executable('strtok', 'strtok.c')
executable('strtol', 'strtol.c')
executable('tac', 'tac.c', dependencies: [libxutil])
executable('tcp-client', 'tcp-client.c')
executable('tcp-server', 'tcp-server.c')
executable('termios', 'termios.c')
executable('ternary', 'ternary.c')
executable('time', 'time.c')
executable('truncate', 'truncate.c')
executable('tsearch', 'tsearch.c')
executable('udp-client', 'udp-client.c')
executable('udp-server', 'udp-server.c')
executable('unblock-signals', 'unblock-signals.c')
executable('unix-client', 'unix-client.c')
executable('unix-server', 'unix-server.c')
executable('va_args', 'va_args.c')
